# Homework_webpython_13_django

./: README.md  config.ini  connector.py  pyproject.toml  requirements.txt
Bestquotes/: manage.py
Bestquotes/Bestquotes/: asgi.py  settings.py  urls.py  wsgi.py
Bestquotes/quotesapp/: admin.py  forms.py  models.py  seed.py  urls.py  views.py
Bestquotes/quotesapp/migrations/: 0001_initial.py
Bestquotes/quotesapp/static/quotesapp/: authors.json
Bestquotes/quotesapp/templates/quotesapp/: author.html  authors.html  base.html  detail.html  index.html  quote.html
Bestquotes/users/: forms.py  urls.py  views.py
Bestquotes/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
alembic/: env.py
alembic/versions/: c77355fd7d15_init.py
